# cmc_cpp_prac7

./: .gitignore  README.md
functions/: CMakeLists.txt  Makefile  func.cpp  func.h  main.cpp  test.cpp  tests.cpp
mafia/: Makefile  README.md  concepts.h  config.yaml  coroutines.h  formatter.cpp  game_master.h  logger.cpp  logger.h  main.cpp  main.out  main_v1.cpp  player.h  players.h  roles.h  shr_ptr.cpp  shr_ptr.h  shuffle.h  test_shared.cpp
mafia/info/: notes.txt
mafia/notes/: thoughts
simulated_annealing/code/: heat_map.py  input_generator.py  main  main.cpp  main_parallel  main_parallel.cpp  parallel_view_result.py  test_parallel.py  test_sequential.py
simulated_annealing/code/headers/: abstruct.h  cooling_laws.h  data_io.h  head_class.h  mutations.h  solution.h
simulated_annealing/code/headers_parallel/: head_class_parallel.h  parallel_loop.h
simulated_annealing/theory/: clean.sh  main.tex  settings.tex  Задание2_имитация_отжига.txt
simulated_annealing/theory/content/: 01_work.aux  01_work.tex
smulated_annealing/: main.cpp  main2.cpp
smulated_annealing/code/: input_generator.py  main  main.cpp  main2  main2.cpp  main_parallel.cpp  test_sequential.py
smulated_annealing/code/input/: input.csv  input1.csv  input2.csv  input3.csv
smulated_annealing/code/input_data/: input_gen.csv
smulated_annealing/theory/: titlepage.tex
smulated_annealing/theory/content/: 01_work.tex
